feat(Students): delete table grade to replace this by a column grade
