# swagger.yaml
@@ -181,24 +181,6 @@ paths:
           description: ''
       tags: *ref_2
   /students/{id}:
-    patch:
-      operationId: StudentsController_update
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UpdateStudentDto'
-      responses:
-        '200':
-          description: ''
-      tags: *ref_2
     delete:
       operationId: StudentsController_remove
       parameters:
@@ -393,24 +375,6 @@ paths:
         '200':
           description: ''
       tags: *ref_6
-    patch:
-      operationId: GamesController_update
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UpdateGameDto'
-      responses:
-        '200':
-          description: ''
-      tags: *ref_6
     delete:
       operationId: GamesController_remove
       parameters:
@@ -423,71 +387,6 @@ paths:
         '200':
           description: ''
       tags: *ref_6
-  /grades:
-    post:
-      operationId: GradesController_create
-      parameters: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CreateGradeDto'
-      responses:
-        '201':
-          description: ''
-      tags: &ref_7
-        - Grades
-    get:
-      operationId: GradesController_findAll
-      parameters: []
-      responses:
-        '200':
-          description: ''
-      tags: *ref_7
-  /grades/{id}:
-    get:
-      operationId: GradesController_findOne
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      responses:
-        '200':
-          description: ''
-      tags: *ref_7
-    patch:
-      operationId: GradesController_update
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UpdateGradeDto'
-      responses:
-        '200':
-          description: ''
-      tags: *ref_7
-    delete:
-      operationId: GradesController_remove
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      responses:
-        '200':
-          description: ''
-      tags: *ref_7
 info:
   title: Math&Magique
   description: Description de l'API de Math&Magique
@@ -627,6 +526,15 @@ components:
         - manage_games
         - email
         - password
+    Grades:
+      type: string
+      enum:
+        - cp
+        - ce1
+        - ce2
+        - cm1
+        - cm2
+      description: Niveau de classe de l’élève
     CreateStudentDto:
       type: object
       properties:
@@ -658,10 +566,11 @@ components:
           type: number
           example: 1
           description: ID du tuteur associé à l'étudiant
-        grade_id:
-          type: number
-          example: 2
-          description: ID du niveau scolaire de l'étudiant
+        grade:
+          example: cm1
+          description: Niveau de classe de l’élève
+          allOf:
+            - $ref: '#/components/schemas/Grades'
       required:
         - lastname
         - firstname
@@ -670,10 +579,7 @@ components:
         - start_hour
         - duration
         - tutor_id
-        - grade_id
-    UpdateStudentDto:
-      type: object
-      properties: {}
+        - grade
     CreateSubscriptionDto:
       type: object
       properties:
@@ -716,15 +622,6 @@ components:
     UpdateSessionDto:
       type: object
       properties: {}
-    Grades:
-      type: string
-      enum:
-        - cp
-        - ce1
-        - ce2
-        - cm1
-        - cm2
-      description: Niveau de classe de l’élève
     CreateGameDto:
       type: object
       properties:
@@ -745,19 +642,3 @@ components:
         - name
         - path
         - grade
-    UpdateGameDto:
-      type: object
-      properties: {}
-    CreateGradeDto:
-      type: object
-      properties:
-        type:
-          example: cm1
-          description: Niveau de classe de l’élève
-          allOf:
-            - $ref: '#/components/schemas/Grades'
-      required:
-        - type
-    UpdateGradeDto:
-      type: object
-      properties: {}
